--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Parallax</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<div class="full-screen">
@@ -19,4 +19,4 @@
 		</div>
 	</body>
 	</html>
-	<script src="script.js"></script>
+	<script src="js/script.js"></script>
