--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 		</div>
 	</div>
 
-	<div class="full-screen"><div class="full-screen">
+	<div class="full-screen">
 		<div class="parallax-container">
 			<div class="parallax bg2"></div>
 		</div>
-	</body>
-	</html>
-	<script src="js/script.js"></script>
+	</div>
+</body>
+</html>
+<script src="js/script.js"></script>
